deploy/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-go-example
  namespace: argocd-go-example
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: argocd-go-example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-go-example
                port:
                  number: 80
